tests/baselines/reference/syntaxErrors.errors.txt
tests/cases/conformance/jsdoc/badTypeArguments.js(2,22): error TS1009: Trailing comma not allowed.


==== tests/cases/conformance/jsdoc/dummyType.d.ts (0 errors) ====
    declare class C<T> { t: T }
    
==== tests/cases/conformance/jsdoc/badTypeArguments.js (1 errors) ====
    /** @param {C.<>} x */
    /** @param {C.<number,>} y */
                         ~
!!! error TS1009: Trailing comma not allowed.
    function f(x, y) {
        return x.t + y.t;
    }
    var x = f({ t: 1000 }, { t: 3000 });
    